--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
             </div>
 
             <p style="color: #666; margin: 2rem 0;">
-                Orders available exclusively through our Android app
+                Orders available exclusively<br>through our Android app
             </p>
 
             <!-- Download button with onclick functionality -->
-            <a href="#download" class="download-btn" onclick="window.open('https://example.com/download', '_blank')">Download App</a>
+            <a href="#download" class="download-btn" onclick="window.open('https://github.com/mahakumbh2025/orderprasad/raw/refs/heads/main/Mahakumbh2025.apk', '_blank')">Download App</a>
         </div>
     </div>
 
