--- a/index.html
+++ b/index.html
@@ -159,5 +159,20 @@
     <p>© 2025 Mahakumbh Prasad | India | English</p>
   
     </div>
+    <script type="text/javascript">
+var sc_project=13082558; 
+var sc_invisible=1; 
+var sc_security="ffdb46ea"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/13082558/0/ffdb46ea/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+
 </body>
 </html>
