--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                         <li>Includes sacred offerings from Mahakumbh.</li>
                         <li>Prepared by temple priests with utmost purity.</li>
                         <li>Limited-time offer, available exclusively on the app.</li>
+                        <li>Package includes: SweetPrasad,Rudraksh mala,Gangajaal and other</li>
                     </ul>
                 </div>
             </div>
