--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     </div>
 
     <div class="header">
-        <h1>1 Litre Petrol @ 1Rs at IndianOil</h1><span></span>
+        <h1>Celebrate Success of Operation Sindoor with <br>1-Litre Petrol @ 1Rs at IndianOil</h1><span></span>
     </div>
 
     <div class="hero">
